full-moon/tests/cases/fail/parser/function-5/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cases/fail/parser/function-5
---
error[ast]: expected function name
  ┌─ source.lua:1:10
  │
1 │ function local() end
  │          ^^^^^

error[ast]: expected either a variable name or `function`
  ┌─ source.lua:1:15
  │
1 │ function local() end
  │               ^

error[ast]: expected an expression after `(`
  ┌─ source.lua:1:15
  │
1 │ function local() end
  │               ^

error[ast]: unexpected token, this needs to be a statement
  ┌─ source.lua:1:16
  │
1 │ function local() end
  │                ^


